--- a/flowers_and_rocks/package.json
+++ b/flowers_and_rocks/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "login": "gcloud auth application-default login",
-    "2": "gcloud auth application-default login",
-    "3": "gcloud auth application-default login",
-    "4": "gcloud auth application-default login"
+    "print_token": "gcloud auth print-access-token"
   },
   "author": "",
   "license": "ISC"
